lox-tests/tests/operator/add_num_nil.stderr
ERROR: Unsupported operation '+' between types 'number' and 'nil'
 --> 1:1
  |
1 | 1 + nil; // expect runtime error: Operands must be two numbers or two strings.
  | ^-----^
